--- a/src/main/resources/assets/mmorpg/lang/ko_kr.json
+++ b/src/main/resources/assets/mmorpg/lang/ko_kr.json
@@ -360,7 +360,7 @@
  "mmorpg.aura.lightning_ailment": "번개의 법령 오라",
  "mmorpg.aura.lightning_damage": "번개 피해 오라",
  "mmorpg.aura.magic_shield": "마법 보호막 오라",
- "mmorpg.aura.magic_shield_reg": "마나 보호막 재생 오라",
+ "mmorpg.aura.magic_shield_reg": "마법 보호막 재생 오라",
  "mmorpg.aura.mana_reg": "마나 재생 오라",
  "mmorpg.aura.physical_ailment": "고통의 법령 오라",
  "mmorpg.aura.physical_damage": "물리 피해 오라",
@@ -696,7 +696,7 @@
  "mmorpg.tag.spell.melee": "근접",
  "mmorpg.tag.spell.minion_explode": "소환수 폭발",
  "mmorpg.tag.spell.movement": "이동기",
- "mmorpg.tag.spell.physical": "물",
+ "mmorpg.tag.spell.physical": "물리",
  "mmorpg.tag.spell.projectile": "발사체",
  "mmorpg.tag.spell.ranged": "원거리",
  "mmorpg.tag.spell.rejuvenate": "회복",
@@ -1546,7 +1546,7 @@
  "mmorpg.stat.magic_shield_leech_cap": "최대 마법 보호막 흡수",
  "mmorpg.stat.magic_shield_on_hit_hit": "피격 시 마법 보호막",
  "mmorpg.stat.magic_shield_per_sec": "초당 마법 보호막 재생",
- "mmorpg.stat.magic_shield_reg_aura_cost": "§7마나 보호막 재생 비용",
+ "mmorpg.stat.magic_shield_reg_aura_cost": "§7마법 보호막 재생 비용",
  "mmorpg.stat.magic_shield_regen": "마법 보호막 재생",
  "mmorpg.stat.magic_spell_dmg": "마법 피해",
  "mmorpg.stat.magic_spell_dmg_taken": "받는 마법 피해",
