ko_kr localization fix
fix some translate

--- a/src/main/resources/assets/mmorpg/lang/ko_kr.json
+++ b/src/main/resources/assets/mmorpg/lang/ko_kr.json
@@ -1616,38 +1616,38 @@
  "mmorpg.stat.physical_weapon_damage": "물리 피해",
  "mmorpg.stat.physical_weapon_damage_per_perc_of_mana": "§9마나§7의 §a[VAL1]%§7를 추가 §6☀ 물리 피해로 획득합니다.",
  "mmorpg.stat.piercing_projectiles": "관통 투사체",
- "mmorpg.stat.plus_lvl_all_spells": "+ 모든 주문",
- "mmorpg.stat.plus_lvl_area_spells": "+ 광역 주문",
- "mmorpg.stat.plus_lvl_arrow_spells": "+ 화살 주문",
- "mmorpg.stat.plus_lvl_beast_spells": "+ 야수 주문",
- "mmorpg.stat.plus_lvl_buff_spells": "+ 버프 주문",
- "mmorpg.stat.plus_lvl_chaining_spells": "+ 연쇄 주문",
- "mmorpg.stat.plus_lvl_chaos_spells": "+ 혼돈 주문",
- "mmorpg.stat.plus_lvl_cold_spells": "+ 냉기 주문",
- "mmorpg.stat.plus_lvl_curse_spells": "+ 저주 주문",
- "mmorpg.stat.plus_lvl_damage_spells": "+ 피해 주문",
- "mmorpg.stat.plus_lvl_fire_spells": "+ 화염 주문",
- "mmorpg.stat.plus_lvl_golem_spells": "+ 골렘 주문",
- "mmorpg.stat.plus_lvl_has_pet_ability_spells": "+ 소환수가 가진 주문",
- "mmorpg.stat.plus_lvl_heal_spells": "+ 힐 주문",
- "mmorpg.stat.plus_lvl_lightning_spells": "+ 번개 주문",
- "mmorpg.stat.plus_lvl_magic_spells": "+ 마법 주문",
- "mmorpg.stat.plus_lvl_melee_spells": "+ 근접 주문",
- "mmorpg.stat.plus_lvl_minion_explode_spells": "+ 소환수 폭발 주문",
- "mmorpg.stat.plus_lvl_movement_spells": "+ 이동기 주문",
- "mmorpg.stat.plus_lvl_physical_spells": "+ 물리 주문",
- "mmorpg.stat.plus_lvl_projectile_spells": "+ 발사체 주문",
- "mmorpg.stat.plus_lvl_ranged_spells": "+ 원거리 주문",
- "mmorpg.stat.plus_lvl_rejuvenate_spells": "+ 회복 주문",
- "mmorpg.stat.plus_lvl_shield_spells": "+ 보호막 주문",
- "mmorpg.stat.plus_lvl_shout_spells": "+ 함성 주문",
- "mmorpg.stat.plus_lvl_song_spells": "+ 노래 주문",
- "mmorpg.stat.plus_lvl_staff_spell_spells": "+ 스태프 주문",
- "mmorpg.stat.plus_lvl_summon_spells": "+ 소환 주문",
- "mmorpg.stat.plus_lvl_thorns_spells": "+ 가시 주문",
- "mmorpg.stat.plus_lvl_totem_spells": "+ 토템 주문",
- "mmorpg.stat.plus_lvl_trap_spells": "+ 함정 주문",
- "mmorpg.stat.plus_lvl_weapon_skill_spells": "+ 무기 스킬 주문",
+ "mmorpg.stat.plus_lvl_all_spells": "모든 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_area_spells": "광역 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_arrow_spells": "화살 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_beast_spells": "야수 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_buff_spells": "버프 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_chaining_spells": "연쇄 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_chaos_spells": "혼돈 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_cold_spells": "냉기 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_curse_spells": "저주 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_damage_spells": "피해 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_fire_spells": "화염 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_golem_spells": "골렘 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_has_pet_ability_spells": "소환수 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_heal_spells": "힐 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_lightning_spells": "번개 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_magic_spells": "마법 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_melee_spells": "근접 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_minion_explode_spells": "소환수 폭발 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_movement_spells": "이동기 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_physical_spells": "물리 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_projectile_spells": "발사체 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_ranged_spells": "원거리 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_rejuvenate_spells": "회복 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_shield_spells": "보호막 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_shout_spells": "함성 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_song_spells": "노래 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_staff_spell_spells": "스태프 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_summon_spells": "소환 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_thorns_spells": "가시 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_totem_spells": "토템 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_trap_spells": "함정 주문 추가 포인트",
+ "mmorpg.stat.plus_lvl_weapon_skill_spells": "무기 스킬 주문 추가 포인트",
  "mmorpg.stat.plus_phys_to_all": "모든 추가 물리 피해",
  "mmorpg.stat.plus_phys_to_chaos": "추가 물리 혼돈 피해",
  "mmorpg.stat.plus_phys_to_elemental": "추가 물리 속성 피해",
@@ -1661,7 +1661,7 @@
  "mmorpg.stat.poison_proc_chance": "산산조각날 확률",
  "mmorpg.stat.poison_resistance": "중독 저항",
  "mmorpg.stat.poison_strength": "중독 강도",
- "mmorpg.stat.positive_eff_dur_u_cast": "mmorpg.tag.effect.positive 지속시간",
+ "mmorpg.stat.positive_eff_dur_u_cast": "버프 지속시간",
  "mmorpg.stat.proj_dmg_received": "받는 투사체 피해",
  "mmorpg.stat.projectile_barrage": "포격 투사체",
  "mmorpg.stat.projectile_cdr": "투사체 쿨타임 감소",
@@ -1692,7 +1692,7 @@
  "mmorpg.stat.shout_spell_dmg": "함성 피해",
  "mmorpg.stat.shout_spell_dmg_taken": "받는 함성 피해",
  "mmorpg.stat.song_cdr": "노래 쿨타임 감소",
- "mmorpg.stat.song_eff_dur_u_cast": "mmorpg.tag.effect.song 지속시간",
+ "mmorpg.stat.song_eff_dur_u_cast": "노래 버프 지속시간",
  "mmorpg.stat.song_spell_dmg": "노래 피해",
  "mmorpg.stat.song_spell_dmg_taken": "받는 노래 피해",
  "mmorpg.stat.spell_all_damage": "모든 주문 피해",
