--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -369,121 +369,6 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-	"mmorpg.affix.amber_amulet": "Amber Amulet",
-	"mmorpg.affix.arcane_staff": "Arcane Staff",
-	"mmorpg.affix.archeologists": "Archeologist's",
-	"mmorpg.affix.ass_bow": "Assassin Bow",
-	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
-	"mmorpg.affix.azure": "Azure",
-	"mmorpg.affix.bandit_mask": "Bandit Mask",
-	"mmorpg.affix.bone_bow": "Bone Bow",
-	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
-	"mmorpg.affix.bone_helm": "Bone Circlet",
-	"mmorpg.affix.boundless": "Boundless",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
-	"mmorpg.affix.chaos_res": "Of the Snake",
-	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
-	"mmorpg.affix.cleric_staff": "Cleric Staff",
-	"mmorpg.affix.crit_prefix": "Critical",
-	"mmorpg.affix.cursed_staff": "Cursed Staff",
-	"mmorpg.affix.desolation": "Desolation",
-	"mmorpg.affix.dusk_blade": "Dusk Blade",
-	"mmorpg.affix.ene_ring": "Emerald Ring",
-	"mmorpg.affix.energetic": "Energetic",
-	"mmorpg.affix.energy_reg": "Invirogating",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
-	"mmorpg.affix.fire_res": "Of the Drake",
-	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg": "Scorched",
-	"mmorpg.affix.focused": "Focused",
-	"mmorpg.affix.glacial_staff": "Glacial Staff",
-	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
-	"mmorpg.affix.glimmering": "Glimmering",
-	"mmorpg.affix.golden_crown": "Golden Crown",
-	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
-	"mmorpg.affix.heal_crit_prefix": "Truthful",
-	"mmorpg.affix.heal_suff": "Of Restoration",
-	"mmorpg.affix.hp_ring": "Coral Ring",
-	"mmorpg.affix.hunter_hood": "Hunter Hood",
-	"mmorpg.affix.immortal": "Immortal",
-	"mmorpg.affix.imperial_bow": "Imperial Bow",
-	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
-	"mmorpg.affix.item_both_armor": "Reinforced",
-	"mmorpg.affix.item_both_dodge": "Scaled",
-	"mmorpg.affix.item_both_ms": "Fortified",
-	"mmorpg.affix.item_flat_armor": "Reinforced",
-	"mmorpg.affix.item_flat_dodge": "Scaled",
-	"mmorpg.affix.item_flat_ms": "Fortified",
-	"mmorpg.affix.item_perc_armor": "Reinforced",
-	"mmorpg.affix.item_perc_dodge": "Scaled",
-	"mmorpg.affix.item_perc_ms": "Fortified",
-	"mmorpg.affix.jade_amulet": "Jade Amulet",
-	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
-	"mmorpg.affix.lightning_res": "Of the Yeti",
-	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
-	"mmorpg.affix.lightning_staff": "Lightning Staff",
-	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
-	"mmorpg.affix.mana_reg": "Soothing",
-	"mmorpg.affix.mana_ring": "Paua Ring",
-	"mmorpg.affix.mana_thief": "Mana Thief's",
-	"mmorpg.affix.mind_cage": "Mind Cage",
-	"mmorpg.affix.ms_reg": "Stabilizing",
-	"mmorpg.affix.ms_ring": "Moonstone Ring",
-	"mmorpg.affix.necro_helmet": "Necromancer Helm",
-	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
-	"mmorpg.affix.of_affluence": "Of Affluence",
-	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
-	"mmorpg.affix.of_brutality": "Of Brutality",
-	"mmorpg.affix.of_consumption": "Of Consumption",
-	"mmorpg.affix.of_devastation": "Of Devastation",
-	"mmorpg.affix.of_energy": "Of Energy",
-	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
-	"mmorpg.affix.of_gluttony": "Of Gluttony",
-	"mmorpg.affix.of_less_cd": "Of Repetition",
-	"mmorpg.affix.of_mana": "Of Mana",
-	"mmorpg.affix.of_pene": "Of Penetration",
-	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
-	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
-	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
-	"mmorpg.affix.of_the_sky": "Of the Sky",
-	"mmorpg.affix.of_the_titan": "Of the Titan",
-	"mmorpg.affix.of_the_troll": "Of The Troll",
-	"mmorpg.affix.of_the_wind": "Of the Wind",
-	"mmorpg.affix.of_treasure": "Of Treasure",
-	"mmorpg.affix.of_vampirism": "Of Vampirism",
-	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
-	"mmorpg.affix.precise": "Precise",
-	"mmorpg.affix.promised": "Promised",
-	"mmorpg.affix.royal_helm": "Royal Helm",
-	"mmorpg.affix.rusted_sword": "Rusted Sword",
-	"mmorpg.affix.scavanger": "Scavanger",
-	"mmorpg.affix.seraphim": "Seraphim's",
-	"mmorpg.affix.siege_helm": "Siege Helmet",
-	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
-	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
-	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
-	"mmorpg.affix.thicket_bow": "Thicket Bow",
-	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
-	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
-	"mmorpg.affix.true_hit": "True Hit",
-	"mmorpg.affix.twilight_blade": "Twilight Blade",
-	"mmorpg.affix.vampiric": "Vampiric",
-	"mmorpg.affix.vdo_mask": "Voodoo Mask",
-	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
-	"mmorpg.affix.water_res": "Of the Storm",
-	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg": "Chilled",
-	"mmorpg.affix.wep_item_both": "Miserable",
-	"mmorpg.affix.wep_item_flat": "Deadly",
-	"mmorpg.affix.wep_item_perc": "Cruel",
-	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
-	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 	"mmorpg.asc_class.hunter": "Hunter",
@@ -655,6 +540,121 @@
 	"mmorpg.support_gem.water_pene": "Cold Penetration Support Gem",
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
+
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+	"mmorpg.affix.amber_amulet": "Amber Amulet",
+	"mmorpg.affix.arcane_staff": "Arcane Staff",
+	"mmorpg.affix.archeologists": "Archeologist's",
+	"mmorpg.affix.ass_bow": "Assassin Bow",
+	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
+	"mmorpg.affix.azure": "Azure",
+	"mmorpg.affix.bandit_mask": "Bandit Mask",
+	"mmorpg.affix.bone_bow": "Bone Bow",
+	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
+	"mmorpg.affix.bone_helm": "Bone Circlet",
+	"mmorpg.affix.boundless": "Boundless",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
+	"mmorpg.affix.chaos_res": "Of the Snake",
+	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
+	"mmorpg.affix.cleric_staff": "Cleric Staff",
+	"mmorpg.affix.crit_prefix": "Critical",
+	"mmorpg.affix.cursed_staff": "Cursed Staff",
+	"mmorpg.affix.desolation": "Desolation",
+	"mmorpg.affix.dusk_blade": "Dusk Blade",
+	"mmorpg.affix.ene_ring": "Emerald Ring",
+	"mmorpg.affix.energetic": "Energetic",
+	"mmorpg.affix.energy_reg": "Invirogating",
+	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
+	"mmorpg.affix.fire_res": "Of the Drake",
+	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg": "Scorched",
+	"mmorpg.affix.focused": "Focused",
+	"mmorpg.affix.glacial_staff": "Glacial Staff",
+	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
+	"mmorpg.affix.glimmering": "Glimmering",
+	"mmorpg.affix.golden_crown": "Golden Crown",
+	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
+	"mmorpg.affix.heal_crit_prefix": "Truthful",
+	"mmorpg.affix.heal_suff": "Of Restoration",
+	"mmorpg.affix.hp_ring": "Coral Ring",
+	"mmorpg.affix.hunter_hood": "Hunter Hood",
+	"mmorpg.affix.immortal": "Immortal",
+	"mmorpg.affix.imperial_bow": "Imperial Bow",
+	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
+	"mmorpg.affix.item_both_armor": "Reinforced",
+	"mmorpg.affix.item_both_dodge": "Scaled",
+	"mmorpg.affix.item_both_ms": "Fortified",
+	"mmorpg.affix.item_flat_armor": "Reinforced",
+	"mmorpg.affix.item_flat_dodge": "Scaled",
+	"mmorpg.affix.item_flat_ms": "Fortified",
+	"mmorpg.affix.item_perc_armor": "Reinforced",
+	"mmorpg.affix.item_perc_dodge": "Scaled",
+	"mmorpg.affix.item_perc_ms": "Fortified",
+	"mmorpg.affix.jade_amulet": "Jade Amulet",
+	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
+	"mmorpg.affix.lightning_res": "Of the Yeti",
+	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
+	"mmorpg.affix.lightning_staff": "Lightning Staff",
+	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
+	"mmorpg.affix.mana_reg": "Soothing",
+	"mmorpg.affix.mana_ring": "Paua Ring",
+	"mmorpg.affix.mana_thief": "Mana Thief's",
+	"mmorpg.affix.mind_cage": "Mind Cage",
+	"mmorpg.affix.ms_reg": "Stabilizing",
+	"mmorpg.affix.ms_ring": "Moonstone Ring",
+	"mmorpg.affix.necro_helmet": "Necromancer Helm",
+	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
+	"mmorpg.affix.of_affluence": "Of Affluence",
+	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
+	"mmorpg.affix.of_brutality": "Of Brutality",
+	"mmorpg.affix.of_consumption": "Of Consumption",
+	"mmorpg.affix.of_devastation": "Of Devastation",
+	"mmorpg.affix.of_energy": "Of Energy",
+	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
+	"mmorpg.affix.of_gluttony": "Of Gluttony",
+	"mmorpg.affix.of_less_cd": "Of Repetition",
+	"mmorpg.affix.of_mana": "Of Mana",
+	"mmorpg.affix.of_pene": "Of Penetration",
+	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
+	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
+	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
+	"mmorpg.affix.of_the_sky": "Of the Sky",
+	"mmorpg.affix.of_the_titan": "Of the Titan",
+	"mmorpg.affix.of_the_troll": "Of The Troll",
+	"mmorpg.affix.of_the_wind": "Of the Wind",
+	"mmorpg.affix.of_treasure": "Of Treasure",
+	"mmorpg.affix.of_vampirism": "Of Vampirism",
+	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
+	"mmorpg.affix.precise": "Precise",
+	"mmorpg.affix.promised": "Promised",
+	"mmorpg.affix.royal_helm": "Royal Helm",
+	"mmorpg.affix.rusted_sword": "Rusted Sword",
+	"mmorpg.affix.scavanger": "Scavanger",
+	"mmorpg.affix.seraphim": "Seraphim's",
+	"mmorpg.affix.siege_helm": "Siege Helmet",
+	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
+	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
+	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
+	"mmorpg.affix.thicket_bow": "Thicket Bow",
+	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
+	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
+	"mmorpg.affix.true_hit": "True Hit",
+	"mmorpg.affix.twilight_blade": "Twilight Blade",
+	"mmorpg.affix.vampiric": "Vampiric",
+	"mmorpg.affix.vdo_mask": "Voodoo Mask",
+	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
+	"mmorpg.affix.water_res": "Of the Storm",
+	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg": "Chilled",
+	"mmorpg.affix.wep_item_both": "Miserable",
+	"mmorpg.affix.wep_item_flat": "Deadly",
+	"mmorpg.affix.wep_item_perc": "Cruel",
+	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
+	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 
 "_comment": " [CATEGORY]: TAGS - NAMES",
@@ -853,36 +853,36 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
@@ -891,8 +891,8 @@
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -1313,7 +1313,7 @@
 	"mmorpg.stat.block_aura_cost": "\u00A77Guardian Cost",
 	"mmorpg.stat.block_chance": "Block Chance",
 	"mmorpg.stat.blood": "Blood",
-	"mmorpg.stat.blood_leech_cap": "Max Blood Leech Rate",
+	"mmorpg.stat.blood_leech_cap": "Blood Leech Cap",
 	"mmorpg.stat.blood_per_10_strength": "\u00A7a[VAL1] \u00A74\u2764 Blood\u00A77 per 10 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.blood_user": "\u00A77You now use \u00A74\u2764 Blood\u00A77 instead of \u00A79\u262F Mana\u00A77",
 	"mmorpg.stat.bonus_exp": "Bonus Experience",
@@ -1425,7 +1425,7 @@
 	"mmorpg.stat.enchanting_misc_drop_bonus": "Misc Drops",
 	"mmorpg.stat.enchanting_triple_drop": "Triple Drop Chance",
 	"mmorpg.stat.energy": "Energy",
-	"mmorpg.stat.energy_leech_cap": "Max Energy Leech Rate",
+	"mmorpg.stat.energy_leech_cap": "Energy Leech Cap",
 	"mmorpg.stat.energy_on_hit_hit": "Energy on Hit",
 	"mmorpg.stat.energy_per_sec": "Energy Per Regen",
 	"mmorpg.stat.energy_reg_aura_cost": "\u00A77Energy Regen Cost",
@@ -1492,7 +1492,7 @@
 	"mmorpg.stat.heal_spell_dmg": "Heal Damage",
 	"mmorpg.stat.heal_spell_dmg_taken": "Heal Damage Taken",
 	"mmorpg.stat.health": "Health",
-	"mmorpg.stat.health_leech_cap": "Max Health Leech Rate",
+	"mmorpg.stat.health_leech_cap": "Health Leech Cap",
 	"mmorpg.stat.health_on_hit_hit": "Health on Hit",
 	"mmorpg.stat.health_on_kill": "Health on Kill",
 	"mmorpg.stat.health_per_10_dexterity": "\u00A7a[VAL1] \u00A7c\u2764 Health\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
@@ -1652,7 +1652,7 @@
 	"mmorpg.stat.magic_shield": "Magic Shield",
 	"mmorpg.stat.magic_shield_aura_cost": "\u00A77Magic Shield Cost",
 	"mmorpg.stat.magic_shield_heal": "Magic Shield Healing",
-	"mmorpg.stat.magic_shield_leech_cap": "Max Magic Shield Leech Rate",
+	"mmorpg.stat.magic_shield_leech_cap": "Magic Shield Leech Cap",
 	"mmorpg.stat.magic_shield_on_hit_hit": "Magic Shield on Hit",
 	"mmorpg.stat.magic_shield_per_sec": "Magic Shield Per Regen",
 	"mmorpg.stat.magic_shield_reg_aura_cost": "\u00A77MS Regen Cost",
@@ -1661,7 +1661,7 @@
 	"mmorpg.stat.magic_spell_dmg_taken": "Magic Damage Taken",
 	"mmorpg.stat.mana": "Mana",
 	"mmorpg.stat.mana_cost": "Mana Cost",
-	"mmorpg.stat.mana_leech_cap": "Max Mana Leech Rate",
+	"mmorpg.stat.mana_leech_cap": "Mana Leech Cap",
 	"mmorpg.stat.mana_on_hit_hit": "Mana on Hit",
 	"mmorpg.stat.mana_on_kill": "Mana on Kill",
 	"mmorpg.stat.mana_per_10_intelligence": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A7b\u2605 Intelligence\u00A77",
